--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,7 @@ code {
 }
 
 .day-container {
-  /* color: green; */
-  /* border: 1px solid green; */
   margin: 1em;
-  /* background-color: beige; */
-  /* padding: 1em; */
   padding: 0.4em;
   font-size: 1rem;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -28,17 +24,17 @@ code {
 
 .day-title {
   display: inline-block;
-  /* border: 1px solid green; */
   font-size: 1.5em;
   font-weight: 300;
   text-transform: uppercase;
-  margin-right: 0.5em;
-  /* width: 100%;
-  height: 100%; */
   text-align: center;
-  /* border-bottom: 1px solid black; */
-  /* margin: 0;
-  margin-bottom: 0.5em; */
+}
+
+.day-date {
+  font-size: 1em;
+  font-weight: 200;
+  margin-right: 1em;
+  margin-left: 0.5em;
 }
 
 .day-options {
@@ -47,39 +43,27 @@ code {
 }
 
 .recipe-card {
-  /* color: green; */
-  /* border: 1px solid red; */
   padding: 0.5em;
   border-radius: 4px;
   box-shadow: 1.5px 1.5px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .recipe-title {
-  /* padding: inherit; */
   text-transform: uppercase;
   font-size: 1.5rem;
   font-weight: 500;
-  /* color: blue; */
 }
 
 .recipe-subtitle {
-  /* padding: inherit; */
   font-weight: 300;
   font-size: 1.2em;
 }
 
 .recipe-description {
   margin-top: 0.7em;
-  /* padding: inherit; */
 }
-
-/* .recipe-ingredients {
-} */
 
 .day-header {
   display: flex;
   align-items: baseline;
-  /* font-size: 2em; */
-  /* align-content: center;
-  text-align: center; */
 }
