--- a/src/index.css
+++ b/src/index.css
@@ -42,15 +42,19 @@ code {
   flex-wrap: nowrap;
 }
 
-.recipe-card {
+.compile-card {
   padding: 0.5em;
   border-radius: 4px;
   box-shadow: 1.5px 1.5px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
+.menu-card {
+  padding: 0.5em;
+}
+
 .recipe-title {
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-weight: 500;
 }
 
@@ -63,7 +67,20 @@ code {
   margin-top: 0.7em;
 }
 
+.recipe-ingredients {
+  padding: 0.5em;
+}
+
 .day-header {
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
+}
+
+.hide {
+  display: none;
+}
+
+.divider {
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
 }
