--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ code {
 .recipe-subtitle {
   font-weight: 300;
   font-size: 1.2em;
+  margin-bottom: 0.5em;
 }
 
 .recipe-description {
@@ -82,6 +83,11 @@ code {
   padding: 0.5em;
   font-size: 1.2em;
   display: block;
+}
+
+.recipe-instruction {
+  /* border: 1px solid red; */
+  margin-top: 0.5em;
 }
 
 .day-header {
